# deppops

./: .gitignore  .nixos-test-history  Cargo.toml  README.md  cosign.pub  flake.nix
.github/workflows/: quality.yml  release.yml
ci/: attach-sbom.nu  sign.nu  vulnscan.nu
k8s/: deployment.yaml  ingress.yaml  ns.yaml  service.yaml
scripts/: get-sbom.nu
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/vm/: default.nix
