[package]
name = "deppops"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deppops"
path = "src/main.rs"

[lib]
name = "deppops"
path = "src/lib.rs"

[dependencies]
actix-web = "4.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde_json = "1.0"

[dev-dependencies]
actix-web = { version = "4.4", features = ["macros"] }
serde_json = "1.0"
